# xcp_d

./: .codespellrc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .versions.json  AGENTS.md  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.base  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  crash-20221031-155653-kahinim-alff_plot-1737d182-852f-4ec5-90f6-f8f91875c821.pklz  get_version.py  pyproject.toml  run_xcpd_profiled.sh  setup.cfg  setup.py  versioneer.py
.circleci/: CiftiWithFreeSurferTest.sh  Nibabies.sh  NiftiWithFreeSurferTest.sh  NiftiWithoutFreeSurferTest.sh  RunPyTests.sh  cifti_with_freesurfer_outputs.txt  config.yml  continue_config.yml  data_versions.txt  get_data.py  get_data.sh  nibabies_outputs.txt  nifti_with_freesurfer_outputs.txt  nifti_without_freesurfer.txt  nifti_without_freesurfer_outputs.txt  run_local_tests.py  test_affines.py
.circleci/tests/: conftest.py  next.py  test_ALFF.py  test_FCON.py  test_FD.py  test_Reg.py  test_TR.py  test_cli.py  test_confounds.py  test_conn.py  test_despike.py  test_example.py  test_fd.py  test_filtering.py  test_interpolation.py  test_prepostcleaning.py  test_reho.py  test_smoothing.py  test_utils.py  test_utils_write_save.py
.cursor/rules/: pennlinc-shared.mdc  xcp_d.mdc
.github/: config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  mode_request.md
.github/workflows/: lint.yml  pixi-lock.yml
.maint/: INSTRUCTIONS.md
docs/: .gitignore  .readthedocs.yaml  .readthedocs.yml  Makefile  Temporalcensoring  api.rst  changes.md  changes.rst  conf.py  contributing.rst  dev_guide.rst  docker.rst  environment.yml  faq.rst  filtering.rst  generalworkflow.rst  index.rst  installation.rst  license.rst  links.rst  output.rst  outputs.rst  pull_request_template.md  regressors.rst  requirements.txt  singularity.rst  taskregression.rst  usage.rst  workflows.rst
docs/sphinxext/: github_link.py
scripts/: fetch_templates.py
src/xcp_d/: __init__.py  __main__.py  _testing.py  _warnings.py
test/: conftest.py  run_local_tests.py  test_cli.py  test_cli_run.py  test_ingression_utils.py  test_interfaces_bids.py  test_interfaces_connectivity.py  test_interfaces_nilearn.py  test_utils_confounds.py  test_utils_doc.py  test_utils_execsummary.py  test_utils_plotting.py  test_utils_restingstate.py  test_utils_utils.py  test_workflows_anatomical.py  test_workflows_connectivity.py  test_workflows_metrics.py  test_workflows_plotting.py  utils.py
test/data/: ds001419_nifti_filter.json  pnc_nifti_filter.json  test_ds001419_cifti_outputs.txt  test_fmriprep_without_freesurfer_outputs.txt  test_nibabies_outputs.txt  test_pnc_cifti_outputs.txt
xcp-abcd/: __about__.py  _version.py
xcp-abcd/cli/: run.py  version.py
xcp-abcd/data/: nipreps.json  reports.yml
xcp-abcd/interfaces/: connectivity.py  report.py  report_core.py
xcp-abcd/utils/: bids.py  sentry.py
xcp-abcd/workflow/: bold.py
xcp_abcd/: __about__.py  __init__.py  __main__.py  _version.py  bids.py  hcp2fmriprep.py
xcp_abcd/cifti/: __init__.py
xcp_abcd/cli/: combineqc.py  run.py  run_2.py
xcp_abcd/data/: boilerplate.bib  license.txt  nipreps.json  report.yml  reports.yml
xcp_abcd/interfaces/: __init__.py  confound.py  connectivity.py  constants.py  executesummary.py  filtering.py  helpers.py  layout_builder.py  prepostcleaning.py  qc_plot.py  regression.py  report.py  report_core.py  resting_state.py  surfplotting.py
xcp_abcd/notebooks/: hcp2fmriprep.py  preprocessing.ipynb
xcp_abcd/utils/: __init__.py  bids.py  cifitiresample.py  cifticonnectivity.py  ciftiparcellation.py  ciftiseparatemetric.py  concantenation.py  confounds.py  dcan2fmriprep.py  execsummary.py  fcon.py  hcp2fmriprep.py  modified_data.py  plot.py  qcmetrics.py  restingstate.py  sentry.py  utils.py  workbench.py  write_save.py
xcp_abcd/workflow/: __init__.py  anatomical.py  base.py  bold.py  bold2.py  boldx.py  cifti.py  cifti2.py  connectivity.py  execsummary.py  outputs.py  postprocessing.py  restingstate.py
xcp_d/: __about__.py  __init__.py  __main__.py  _version.py  _warnings.py  config.py  versioneer.py
xcp_d/cli/: combineqc.py  parser.py  parser_utils.py  profile_resources.py  run.py  version.py  workflow.py
xcp_d/data/: __init__.py  atlas_bids_config.json  boilerplate.bib  io_spec.yaml  nipreps.json  reports-spec-anat.yml  reports-spec-func.yml  reports-spec.yml  reports.yml  xcp_d_bids_config.json  xcp_d_bids_config2.json
xcp_d/ingression/: __init__.py  abcdbids.py  hcpd.py  hcpya.py  ukbiobank.py  utils.py
xcp_d/interfaces/: __init__.py  ants.py  bids.py  c3.py  censoring.py  concatenation.py  confound.py  connectivity.py  constants.py  execsummary.py  executive_summary.py  filtering.py  helpers.py  layout_builder.py  nilearn.py  plotting.py  prepostcleaning.py  qc_plot.py  regression.py  report.py  report_core.py  resting_state.py  restingstate.py  surfplotting.py  utils.py  workbench.py
xcp_d/notebooks/: hcp2fmriprep.py  preprocessing.ipynb  restingstate.ipynb
xcp_d/reports/: __init__.py  core.py
xcp_d/tests/: __init__.py  config.toml  conftest.py  run_local_tests.py  test_ALFF.py  test_FD.py  test_TR.py  test_cli.py  test_cli_run.py  test_cli_utils.py  test_config.py  test_confounds.py  test_conn.py  test_despike.py  test_filtering.py  test_ingression_abcdbids.py  test_ingression_hcpya.py  test_ingression_ukbiobank.py  test_ingression_utils.py  test_interfaces_bids.py  test_interfaces_censoring.py  test_interfaces_concatenation.py  test_interfaces_connectivity.py  test_interfaces_execsummary.py  test_interfaces_nilearn.py  test_interfaces_prepostcleaning.py  test_interfaces_utils.py  test_interfaces_workbench.py  test_prepostcleaning.py  test_reho.py  test_reports_core.py  test_resource_monitor.py  test_skip_integration.py  test_skip_parameter.py  test_smoothing.py  test_utils_atlas.py  test_utils_bids.py  test_utils_bids_collect_confounds.py  test_utils_bids_collect_data.py  test_utils_boilerplate.py  (+22 more)
xcp_d/utils/: __init__.py  atlas.py  bids.py  (+29 more)
(+377 files in other folders)
