[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions"]
build-backend = "hatchling.build"

[project]
name = "xcp_d"
description = "XCP-D: A Robust Postprocessing Pipeline of fMRI data"
authors = [{name = "PennLINC and DCAN labs"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    'importlib_resources; python_version < "3.11"',
    "acres",
    "beautifulsoup4",  # to clean up HTML in DCAN executive summary outputs
    "bids-validator <= 1.14.7.post0",
    "h5py <= 3.15.1",  # for DCAN motion file
    "indexed_gzip ~= 1.10.1",  # for loading imgs in nibabel
    "jinja2 ~= 3.1.2",  # for executive summary
    "joblib <= 1.5.3",
    "matplotlib ~= 3.10.0",
    "networkx <= 3.4.2",  # nipype needs networkx, but 3+ isn't compatible with nipype 1.8.5
    "nibabel >= 3.2.1",
    "nilearn == 0.13.1",  # 0.10.2 raises error with compcor from fMRIPrep 23
    "nipype ~= 1.10.0",
    "nireports ~= 25.3.0",
    "niworkflows == 1.14.4",
    "nitime",  # for DVARS calculation in Nipype
    "num2words",  # for boilerplates
    "numpy ~= 2.0",
    "packaging",  # for version string parsing
    "pandas",
    "psutil >= 5.4",  # for sentry
    "pybids ~= 0.21.0",
    "pyyaml",
    "scikit-learn <= 1.7.2",
    "scipy >= 1.14.0,<= 1.15.3",  # nipype needs networkx, which needs scipy > 1.8.0
    "seaborn",  # for plots
    "sentry-sdk ~= 2.53.0",  # for usage reports
    "templateflow ~= 25.1.1",
    "toml",
    "trimesh",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PennLINC/xcp_d"
Documentation = "https://www.xcp-d.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennlinc/xcp_d/tags/"
NiPreps = "https://www.nipreps.org/"

[project.optional-dependencies]
doc = [
    "doctest-ignore-unicode",
    "pydot >=1.2.3",
    "pydotplus",
    "recommonmark",
    "sphinx >= 4.2.0",
    "sphinx-argparse != 0.5.0",
    "sphinx-markdown-tables",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
    "svgutils",
    "sphinx_design",
]
dev = [
    "ruff ~= 0.15.0",
    "pre-commit",
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-env",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]

# Aliases
all = ["xcp_d[dev,doc,maint,tests]"]

[project.scripts]
xcp_d = "xcp_d.cli.run:main"
xcp_d-combineqc = "xcp_d.cli.aggregate_qc:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["xcp_d"]
exclude = [
    "xcp_d/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
# raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "xcp_d/_version.py"

#
# Pixi configuration
#

[tool.pixi.workspace]
channels = ["https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation.env]
FSLDIR = "$CONDA_PREFIX"
FSLOUTPUTTYPE = "NIFTI_GZ"

[tool.pixi.environments]
default = { features = ["editable"], solve-group = "default" }
test = { features = ["editable", "tests"], solve-group = "default" }
xcp-d = { features = ["production", "container"], solve-group = "production" }

[tool.pixi.feature.editable.pypi-dependencies]
xcp_d = { path = ".", editable = true }

[tool.pixi.feature.production.pypi-dependencies]
xcp_d = { path = ".", editable = false }

[tool.pixi.tasks]

[tool.pixi.pypi-options.dependency-overrides]
numpy = ">=2.0"

[tool.pixi.dependencies]
python = "3.12.*"
nodejs = "20.*"
mkl = "2024.2.2.*"
mkl-service = "2.4.2.*"
numpy = "2.0.*"
scipy = "1.15.*"
matplotlib = "3.10.*"
pandas = "2.2.*"
h5py = "3.15.*"
graphviz = "12.2.*"
pandoc = "3.7.*"
ants = "2.6.*"
connectome-workbench-cli = { version = "2.0.*", build = "*qt6*" }
fsl-base = "2602.*"
fsl-avwutils = "2209.3.*"
fsl-bet2 = "2111.8.*"
fsl-flirt = "2111.4.*"
fsl-fugue = "2201.5.*"
fsl-mcflirt = "2111.0.*"
fsl-miscmaths = "2412.4.*"
fsl-miscvis = "2201.1"
fsl-topup = "2203.5.*"
fsl-warpfns = "2501.0.*"

[tool.pixi.feature.container.dependencies]
git = "*"
git-annex = { version = "*", build = "alldep*" }

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S105",
  "S311",  # We are not using random for cryptographic purposes
  "S603",  # subprocess used only for trusted commands (git, pandoc, test runners)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"xcp_d/utils/debug.py" = ["A002", "T100"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "integration: mark test as an integration test",
    "ds001419_nifti: mark NIfTI integration test for fMRIPrep derivatives from ds001419",
    "ds001419_cifti: mark CIFTI integration test for fMRIPrep derivatives from ds001419",
    "ukbiobank: mark integration test for UK Biobank derivatives with NIfTI settings",
    "pnc_cifti: mark integration test for fMRIPrep derivatives with CIFTI settings",
    "pnc_cifti_t2wonly: mark integration test for fMRIPrep derivatives with CIFTI settings and a simulated T2w file",
    "fmriprep_without_freesurfer: mark integration test for fMRIPrep derivatives without FreeSurfer",
    "fmriprep_without_freesurfer_with_main: mark integration test for fMRIPrep derivatives without FreeSurfer using main function",
    "nibabies: mark integration test for nibabies derivatives",
]

[tool.pytest_env]
RUNNING_PYTEST = "1"

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "xcp_d/_version.py"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.html,dataset_description.json,*.gii'
# te - TE
# Weill - name
# reson - Reson. abbreviation in citation
# DNE: acronym for does not exist
# fo: acronym for file object
ignore-words-list = 'te,weill,reson,DNE,fo'
