[metadata]
url = https://github.com/PennLINC/xcp_d
author = PENNLINC,DAMIENS LAB staff 
author_email = xcpabcd@pennlinc.io
maintainer = az,mb etc 
maintainer_email = xcpabcd@pennlinc.io
description = xcp abcd
long_description = file:des
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
install_requires =
    nibabel >= 3.2.1
    nipype >= 1.7.0
    indexed_gzip ~= 1.6.4
    numpy ~= 1.18.1
    tempita
    pandas
    nilearn ~= 0.6.0
    brainsprite ~= 0.14.2
    psutil >= 5.4
    pybids >= 0.14.0
    pyyaml
    templateflow ~= 0.6.1
    sentry-sdk ~= 1.4.3
    scikit-learn >= 0.20
    niworkflows ~= 1.3.2
    networkx <= 2.6.3
    num2words
    h5py
    natsort
test_requires =
    coverage
    codecov
    pytest
packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    nbsphinx
    packaging
    pydot >=1.2.3
    pydotplus
    sphinx >= 4.2.0
    sphinx-argparse
    sphinx_rtd_theme
    sphinx-markdown-tables
    recommonmark
docs =
    %(doc)s
duecredit = duecredit
resmon =
sentry = sentry-sdk >=0.20.0
tests =
    coverage
    codecov
    pytest
all =
    %(doc)s
    %(duecredit)s
    %(sentry)s

[options.package_data]
xcp_d =
    data/ciftiatlas/*
    data/niftiatlas/*
    data/niftiatlas/*/*.nii.gz
    data/fmriprep/*json
    data/fmriprep/*/*html
    data/fmriprep/*/*svg
    data/fmriprep/*/*/*html
    data/fmriprep/*/*/*svg
    data/fmriprep/*/*/*/*json
    data/fmriprep/*/*/*/*nii.gz
    data/fmriprep/*/*/*/*nii
    data/fmriprep/*/*/*/*h5
    data/fmriprep/*/*/*/*tsv
    data/fmriprep/*/*/*/*txt
    data/*bib 
    data/*yml
    data/*.txt
    data/transform/*html
    data/transform/*h5
    data/transform/*txt
    data/*.json
    VERSION

[options.entry_points]
console_scripts =
    xcp_d=xcp_d.cli.run:main
    xcp_d-combineqc=xcp_d.cli.combineqc:main
[versioneer]
VCS = git
style = pep440
versionfile_source = xcp_d/_version.py
versionfile_build = xcp_d/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
