[metadata]
url = https://github.com/PennLINC/xcp_d
author = PENNLINC,DAMIENS LAB staff
author_email = xcpabcd@pennlinc.io
maintainer = az,mb etc
maintainer_email = xcpabcd@pennlinc.io
description = xcp d
long_description = file:des
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
install_requires =
    beautifulsoup4  # to clean up HTML in DCAN executive summary outputs
    h5py  # for DCAN motion file
    indexed_gzip ~= 1.6.4  # for loading imgs in nibabel
    jinja2 ~= 3.0.0  # for executive summary
    matplotlib ~= 3.4.2
    networkx ~= 2.8.8  # nipype needs networkx, but 3+ isn't compatible with nipype 1.8.5
    nibabel >= 3.2.1
    nilearn ~= 0.10.0
    nipype ~= 1.8.5
    niworkflows == 1.7.3
    num2words  # for boilerplates
    numpy ~= 1.19
    packaging  # for version string parsing
    pandas
    psutil >= 5.4  # for sentry
    pybids ~= 0.15.1
    pyyaml
    scikit-learn ~= 1.1
    scipy >= 1.8.0  # nipype needs networkx, which needs scipy > 1.8.0
    seaborn  # for plots
    sentry-sdk ~= 1.4.3  # for usage reports
    templateflow ~= 0.8.1
packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    doctest-ignore-unicode
    nbsphinx
    pydot >=1.2.3
    pydotplus
    recommonmark
    sphinx >= 4.2.0
    sphinx-argparse
    sphinx-markdown-tables
    sphinx_rtd_theme
    sphinxcontrib-apidoc
    sphinxcontrib-bibtex
    svgutils
tests =
    codecov
    coverage
    pytest
    pytest-cov
all =
    %(doc)s
    %(tests)s

[options.package_data]
xcp_d =
    data/masks/*
    data/ciftiatlas/*
    data/executive_summary_templates/*
    data/executive_summary_scenes/*
    data/niftiatlas/*
    data/niftiatlas/*/*.nii.gz
    data/standard_mesh_atlases/*.gii
    data/standard_mesh_atlases/*/*.gii
    data/standard_mesh_atlases/*/*/*.gii
    data/*bib
    data/*yml
    data/*.txt
    data/transform/*h5
    data/transform/*txt
    data/*.json
    VERSION

[options.entry_points]
console_scripts =
    xcp_d=xcp_d.cli.run:_main
    xcp_d-combineqc=xcp_d.cli.combineqc:main

[versioneer]
VCS = git
style = pep440
versionfile_source = xcp_d/_version.py
versionfile_build = xcp_d/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/,versioneer.py,xcp_d/_version.py,xcp_d/notebooks/,xcp_d/utils/sentry.py,xcp_d/tests/
ignore = D107,E203,E402,E722,W503,N803,N806,N815
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
